tdf#92130 fix DoEvents to be recognized as keyword

Change-Id: I24868acec66a72abbb52b8026ed3a092dbd97632
Reviewed-on: https://gerrit.libreoffice.org/17347
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit 11f24bc2f032b31095663cb09ef948eee2c61f49)
Signed-off-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>